feat(variable-explanation): Refactoring code.